# zer

./: .gitignore  .gitmodules  Cargo.toml  README.md  deny.toml  requirements.txt
.github/workflows/: ci.yml
crates/zer/: Cargo.toml  README.md
crates/zer-adapters/: Cargo.toml  README.md
crates/zer-adapters/src/: arrow.rs  bench_writer.rs  lib.rs  polars.rs  time.rs
crates/zer-adapters/tests/: polars_integration.rs
crates/zer-bench/: Cargo.toml  README.md
crates/zer-bench/src/: main.rs  nvtx_layer.rs
crates/zer-bench/src/cmd/: accuracy.rs  compare.rs  library.rs  mod.rs  plot.rs  throughput.rs  util.rs
crates/zer-bench/src/cmd/scenarios/: mod.rs  registry.rs
crates/zer-bench/src/cmd/strategies/: brp_dedupe.rs  brp_hks_link.rs  brp_kvk_hks_link_and_dedupe.rs  brp_sis_link.rs  mod.rs
crates/zer-blocking/: Cargo.toml  README.md
crates/zer-blocking/examples/: basic_blocking.rs  secondary_blocking_key.rs
crates/zer-blocking/src/: blocker.rs  factory.rs  index.rs  lib.rs  normalize.rs
crates/zer-blocking/src/keys/: alias.rs  date.rs  document.rs  exact.rs  mod.rs  phonetic.rs  phonetic_initial.rs  suffix.rs  token.rs  transliterated.rs  vehicle.rs
crates/zer-blocking/tests/: test_blocking_anpr.rs  test_blocking_kvk.rs  test_blocking_sis.rs
crates/zer-cluster/: Cargo.toml  README.md
crates/zer-cluster/examples/: cluster_and_store.rs  cluster_load.rs  cluster_save.rs
crates/zer-cluster/src/: clusterer.rs  graph.rs  lib.rs  provenance.rs  threshold.rs
crates/zer-cluster/src/store/: mod.rs  zes.rs
crates/zer-cluster/tests/: test_clusterer.rs  test_graph.rs  test_store.rs  test_threshold.rs
crates/zer-compare/: Cargo.toml  README.md
crates/zer-compare/examples/: basic_compare.rs  levenshtein.rs
crates/zer-compare/src/: comparator.rs  discretize.rs  em.rs  lib.rs  scoring.rs
crates/zer-compare/src/similarity/: address.rs  date.rs  id.rs  mod.rs  name.rs  numeric.rs
crates/zer-compare/tests/: test_compare_brp.rs  test_compare_hks.rs
crates/zer-compute/: Cargo.toml  README.md  build.rs
crates/zer-compute/examples/: auto_detect.rs  batch_compare.rs  hello_backend.rs
crates/zer-compute/src/: batch_sizer.rs  comparator.rs  error.rs  kernel.rs  lib.rs  scorer.rs  soa.rs
crates/zer-compute/src/backend/: mod.rs
crates/zer-compute/src/backend/avx2/: device.rs  mod.rs
crates/zer-compute/src/backend/avx2/launch/: em_reduce.rs  hello_backend.rs
crates/zer-compute/src/backend/cpu/: device.rs  mod.rs
crates/zer-compute/src/backend/cpu/launch/: em_reduce.rs  hello_backend.rs  mod.rs
crates/zer-compute/src/backend/cuda/: buffers.rs  device.rs  mod.rs
crates/zer-compute/src/backend/cuda/kernels/: em_reduce.cu  hello_backend.cu
crates/zer-compute/src/backend/cuda/launch/: em_reduce.rs  hello_backend.rs  mod.rs
crates/zer-compute/src/backend/vulkan/: buffers.rs  device.rs  mod.rs
crates/zer-compute/src/backend/vulkan/launch/: em_reduce.rs  hello_backend.rs
crates/zer-compute/src/backend/vulkan/shaders/: em_reduce.slang  hello_backend.slang
crates/zer-compute/src/kernels/: em_reduce.rs  hello_backend.rs  mod.rs
crates/zer-compute/tests/: comparator_scorer.rs  cpu_fallback.rs  cuda_cpu_parity.rs
crates/zer-core/: Cargo.toml  README.md
crates/zer-core/src/: comparison.rs  entity.rs  error.rs  field_mapping.rs  lib.rs  record.rs  record_pool.rs  schema.rs  scoring.rs  traits.rs
crates/zer-judge/: Cargo.toml  README.md
crates/zer-judge/examples/: audit_log.rs  calibration_table.rs  judge_backend.rs  near_duplicate_generator.rs  serialize_pair.rs  spec_selection.rs
crates/zer-judge/src/: audit.rs  backend.rs  calibration.rs  dummy.rs  error.rs  judge.rs  lib.rs  serialize.rs  session.rs  spec.rs  test_utils.rs  tokenize.rs
crates/zer-judge/tests/: test_audit.rs  test_calibration.rs  test_inference.rs  test_judge.rs  test_judge_backend.rs  test_serialize.rs  test_spec.rs
crates/zer-lib/: Cargo.toml  README.md
crates/zer-lib/src/: lib.rs
crates/zer-lib/tests/: test_core_types.rs  unified_api.rs
crates/zer-pipeline/: Cargo.toml  README.md
crates/zer-pipeline/examples/: batch_demo.rs  link_and_dedupe.rs  link_only.rs  linked_pairs_output.rs  streaming_demo.rs  threshold_overrides.rs
crates/zer-pipeline/src/: batch.rs  cluster_view.rs  config.rs  ingester.rs  lib.rs  pipeline.rs  progress.rs  rate.rs
crates/zer-pipeline/tests/: cluster_view_linkage.rs  link_mode_integration.rs  pipeline_integration.rs
crates/zer-prof/: Cargo.toml  README.md
crates/zer-prof/src/: lib.rs  nvtx.rs
crates/zer-schema/: Cargo.toml  README.md  heuristics_name.toml  heuristics_values.toml
crates/zer-schema/examples/: registry_load.rs  registry_save.rs  registry_warmstart.rs  schema_inference.rs
crates/zer-schema/src/: artifact.rs  config.rs  fingerprint.rs  infer.rs  lib.rs  registry.rs  similarity.rs
crates/zer-schema/tests/: test_fingerprint.rs  test_infer.rs  test_registry.rs
crates/zer-test-utils/: Cargo.toml
data_generator/: _common.py  generate_bench.py  generate_demo_linkage.py  generate_demo_multi_source.py  generate_demo_persons.py  generate_examples_tests.py  generate_raw.py  generation.md  requirement.txt
demos/: README.md
demos/blocking_explorer/: Cargo.toml
demos/blocking_explorer/src/: main.rs
demos/common/: Cargo.toml
demos/cross_source_linkage/: Cargo.toml
demos/custom_components/: Cargo.toml
demos/custom_components/src/: main.rs
demos/hello_backend/: Cargo.toml
demos/hello_backend/src/: main.rs
demos/multi_source_linkage/: Cargo.toml
demos/multi_source_linkage/src/: main.rs
demos/person_deduplication/: Cargo.toml
demos/person_deduplication/src/: main.rs
demos/scoring_walkthrough/: Cargo.toml
demos/scoring_walkthrough/src/: main.rs
docs/sphinx/: conf.py  (+2 more)
models/: generate_onnx_model.py  requirements.txt
scripts/: download_dataset.sh  download_datasets.sh  download_models.sh  generate_data.sh  generate_docs.sh  run_all_demos.sh  run_all_examples.sh  run_all_tests.sh  run_benchmark.sh  run_demo.sh  test_ci.sh  upload_dataset.sh  upload_docs.sh  upload_library.sh  upload_models.sh
(+53 files in other folders)
