[workspace]
resolver = "2"
members = [
    "crates/zer-core",
    "crates/zer-blocking",
    "crates/zer-compare",
    "crates/zer",
    "crates/zer-schema",
    "crates/zer-compute",
    "crates/zer-prof",
    "crates/zer-bench",
    "crates/zer-cluster",
    "crates/zer-pipeline",
    "crates/zer-judge",
    "crates/zer-adapters",
    "crates/zer-test-utils",
    # Demos
    "demos/common",
    "demos/hello_backend",
    "demos/person_deduplication",
    "demos/cross_source_linkage",
    "demos/multi_source_linkage",
    "demos/blocking_explorer",
    "demos/scoring_walkthrough",
    "demos/custom_components",
]

[workspace.dependencies]
serde               = { version = "1", features = ["derive"] }
thiserror           = "2"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }
tokio               = { version = "1", features = ["full"] }
rayon               = "1"
ahash               = { version = "0.8", features = ["serde"] }
toml                = "0.8"
sysinfo             = "0.32"

[profile.debug-full]
inherits = "dev"
codegen-units = 1
incremental = false
debug = 2
strip = "none"

# zer-bench is a benchmarking tool.  All crates workspace members AND
# external dependencies must compile at release optimisation level so that
# `cargo run -p zer-bench` gives accurate results without needing --release.
# The wildcard entry covers external deps (hashbrown, tokenizers, ort, …);
# the named entries cover workspace members (path deps, excluded by "*").
# zer-bench itself also disables debug-assertions and overflow-checks to
# match installed-binary behaviour.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.zer-bench]
opt-level        = 3
debug-assertions = false
overflow-checks  = false

[profile.dev.package.zer]
opt-level = 3

[profile.dev.package.zer-core]
opt-level = 3

[profile.dev.package.zer-schema]
opt-level = 3

[profile.dev.package.zer-compute]
opt-level = 3

[profile.dev.package.zer-blocking]
opt-level = 3

[profile.dev.package.zer-compare]
opt-level = 3

[profile.dev.package.zer-cluster]
opt-level = 3

[profile.dev.package.zer-pipeline]
opt-level = 3

[profile.dev.package.zer-judge]
opt-level = 3

[profile.dev.package.zer-adapters]
opt-level = 3