[package]
name        = "zer-cluster"
version     = "1.0.8"
edition     = "2021"
description = "Connected-components clustering and entity storage for the zer entity-resolution library"
license     = "Apache-2.0"
repository  = "https://github.com/ZAL-Analytics/zer"
keywords    = ["entity-resolution", "clustering", "graph", "deduplication"]
categories  = ["algorithms", "data-structures"]
readme      = "README.md"

[dependencies]
zer-core   = { path = "../zer-core", version = "1.0" }
petgraph   = "0.6"
rusqlite   = { version = "0.31", features = ["bundled"] }
serde_json = "1"
serde      = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
csv             = "1"
tempfile        = "3"
zer-test-utils  = { path = "../zer-test-utils" }
