[package]
name        = "zer-judge"
version     = "1.0.3"
edition     = "2021"
description = "ONNX-based neural judge for zer, runs DeBERTa/MiniLM NLI models via ORT to adjudicate borderline record pairs"
license     = "Apache-2.0"
repository  = "https://github.com/ZAL-Analytics/zer"
keywords    = ["entity-resolution", "onnx", "nli", "deberta", "ort"]
categories  = ["science", "algorithms"]
readme      = "README.md"

[features]
default = []
judge_cpu      = []
# NVIDIA CUDA execution provider for ORT (requires CUDA toolkit and cuDNN).
# Prefixed judge_ to distinguish from zer-compute's cuda feature.
judge_cuda     = ["ort/cuda"]
# NVIDIA TensorRT execution provider, enables FP16 kernel compilation and engine caching.
# Requires TensorRT 8+ and the CUDA toolkit.  Engines are cached under ~/.cache/zer-judge/trt-engines.
judge_tensorrt = ["ort/tensorrt", "ort/cuda"]
# AMD ROCm execution provider for ORT.
judge_rocm     = ["ort/rocm"]
# Windows DirectML execution provider for ORT.
judge_directml = ["ort/directml"]
# Intel OpenVINO execution provider for ORT.
judge_openvino = ["ort/openvino"]

[dependencies]
zer-core    = { path = "../zer-core", version = "1.0" }

ort         = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native", "copy-dylibs"] }
tokenizers  = { version = "0.21", default-features = false, features = ["onig"] }
ndarray     = "0.17"
serde       = { workspace = true }
serde_json  = "1"
thiserror   = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full"] }
