[package]
name        = "zer-lib"
version     = "1.0.0"
edition     = "2021"
description = "Zero-shot entity resolution pipeline for Dutch-centric data, with GPU acceleration and neural judging"
license     = "Apache-2.0"
repository  = "https://github.com/ZAL-Analytics/zer"
keywords    = ["entity-resolution", "record-linkage", "deduplication", "dutch", "nlp"]
categories  = ["science", "algorithms", "data-structures"]
readme      = "README.md"

[features]
default = []
cuda   = ["dep:zer-compute", "zer-compute/cuda"]
vulkan = ["dep:zer-compute", "zer-compute/vulkan"]
avx2   = ["dep:zer-compute", "zer-compute/avx2"]
cpu           = ["dep:zer-compute", "zer-compute/cpu"]
# Pass debug-shaders through to zer-compute/build.rs which gates -g/-G/-O0 on nvcc.
# Only meaningful with cuda enabled.
debug-shaders = ["dep:zer-compute", "zer-compute/debug-shaders"]
# Enable the pipeline crate (Pipeline, Ingester, etc.) without any ingest helpers.
pipeline = ["dep:zer-pipeline"]
# ORT execution providers for zer-judge.
# Prefixed judge_ to avoid confusion with the compute-backend features above.
judge_cpu      = ["dep:zer-judge"]
judge_cuda     = ["dep:zer-judge", "zer-judge/judge_cuda"]
judge_rocm     = ["dep:zer-judge", "zer-judge/judge_rocm"]
judge_directml = ["dep:zer-judge", "zer-judge/judge_directml"]
judge_openvino = ["dep:zer-judge", "zer-judge/judge_openvino"]

[dependencies]
zer-core     = { path = "../zer-core",     version = "1.0" }
zer-blocking = { path = "../zer-blocking", version = "1.0" }
zer-compare  = { path = "../zer-compare",  version = "1.0" }
zer-compute  = { path = "../zer-compute",  version = "1.0", optional = true }
zer-schema   = { path = "../zer-schema",   version = "1.0" }
zer-cluster  = { path = "../zer-cluster",  version = "1.0" }
zer-pipeline = { path = "../zer-pipeline", version = "1.0", optional = true }
zer-judge    = { path = "../zer-judge",    version = "1.0", optional = true }
serde          = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
serde_json = "1"
bincode    = "2"
csv        = "1"
