[package]
name        = "zer-pipeline"
version     = "1.0.8"
edition     = "2021"
description = "End-to-end entity resolution pipeline: ingestion, blocking, comparison, scoring, and clustering"
license     = "Apache-2.0"
repository  = "https://github.com/ZAL-Analytics/zer"
keywords    = ["entity-resolution", "record-linkage", "pipeline", "deduplication"]
categories  = ["algorithms", "science"]
readme      = "README.md"

[features]
default = []
# Collect all scored pairs after judging for PR-AUC / optimal-threshold analysis.
# Incurs allocation cost proportional to candidate pair count; disable in production.
collect-pairs = []
# Phase 7: judge integration
# judge = ["dep:zer-judge"]

[dependencies]
zer-core     = { path = "../zer-core",     version = "1.0" }
zer-blocking = { path = "../zer-blocking", version = "1.0" }
zer-compare  = { path = "../zer-compare",  version = "1.0" }
zer-schema   = { path = "../zer-schema",   version = "1.0" }
zer-cluster  = { path = "../zer-cluster",  version = "1.0" }
tokio        = { workspace = true }
rayon        = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tempfile   = "3"
tokio      = { workspace = true }
serde_json = "1"
