[package]
name        = "zer-prof"
version     = "1.0.0"
edition     = "2021"
description = "Host-side NVTX profiling annotations for zer, trace! and trace_cuda! macros with zero-cost no-op fallback"
license     = "Apache-2.0"
repository  = "https://github.com/ZAL-Analytics/zer"
keywords    = ["nvtx", "profiling", "cuda", "gpu", "nsight"]
categories  = ["development-tools::profiling"]
readme      = "README.md"

[features]
default = []
# Standalone NVTX feature, enables the NvtxGuard without any compute backend.
nvtx   = ["dep:nvtx"]
# All backend features activate NVTX so nsys can capture named ranges
# regardless of which backend is being profiled.
cuda   = ["nvtx"]
avx2   = ["nvtx"]
cpu    = ["nvtx"]
vulkan = ["nvtx"]

[dependencies]
# NVTX: Nsight Systems range annotations consumed by nsys (timeline) and ncu
# (kernel-filtered profiling).  Ships with the CUDA toolkit, no separate install.
nvtx = { version = "1.3", optional = true }
