[package]
name    = "custom-components"
version     = "1.0.0"
edition = "2021"
publish  = false
license  = "Apache-2.0"
description = "Shows how to plug custom Judge, Blocker, and Scorer implementations into the zer pipeline"

[dependencies]
demo-common  = { path = "../common" }
zer-pipeline = { path = "../../crates/zer-pipeline" }
zer-compare  = { path = "../../crates/zer-compare" }
zer-core     = { path = "../../crates/zer-core" }
zer-cluster  = { path = "../../crates/zer-cluster" }
tokio        = { workspace = true }

[[bin]]
name = "custom_components"
path = "src/main.rs"
