[package]
name    = "person-deduplication"
version     = "1.0.0"
edition = "2021"
publish  = false
license  = "Apache-2.0"
description = "Deduplication of a Dutch BRP person registry using the full zer pipeline"

[dependencies]
demo-common    = { path = "../common" }
zer-pipeline   = { path = "../../crates/zer-pipeline" }
zer-core       = { path = "../../crates/zer-core" }
zer-cluster    = { path = "../../crates/zer-cluster" }
tokio          = { workspace = true }
csv            = "1"
serde          = { workspace = true, features = ["derive"] }

[[bin]]
name = "person_deduplication"
path = "src/main.rs"
